; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_repository.c_git_repository_head_tree.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_repository.c_git_repository_head_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OBJECT_TREE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_repository_head_tree(i32** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32** %0, i32*** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @git_repository_head(i32** %6, i32* %9)
  store i32 %10, i32* %8, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %8, align 4
  store i32 %13, i32* %3, align 4
  br label %27

14:                                               ; preds = %2
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* @GIT_OBJECT_TREE, align 4
  %17 = call i32 @git_reference_peel(i32** %7, i32* %15, i32 %16)
  store i32 %17, i32* %8, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  br label %23

20:                                               ; preds = %14
  %21 = load i32*, i32** %7, align 8
  %22 = load i32**, i32*** %4, align 8
  store i32* %21, i32** %22, align 8
  br label %23

23:                                               ; preds = %20, %19
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @git_reference_free(i32* %24)
  %26 = load i32, i32* %8, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %23, %12
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @git_repository_head(i32**, i32*) #1

declare dso_local i32 @git_reference_peel(i32**, i32*, i32) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
